# code-agent-proxy

./: .env.example  .gitignore  CLAUDE-CODE-QUICKSTART.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  litellm_config.yaml
.devcontainer/: config.toml.template  devcontainer.json  setup-claude-code.sh  setup-codex.sh
.devcontainer/rust-agent/: Dockerfile  README.md  devcontainer.json  setup.sh
code_agent/: .env.example  .gitignore  AGENT_QUICKSTART.md  Cargo.toml  README.md  examples.sh
code_agent/examples/user_tools/: README.md
code_agent/examples/user_tools/definitions/: json_format.json  weather.json  word_count.json
code_agent/examples/user_tools/scripts/: json_format.py  word_count.sh
code_agent/src/: main.rs
code_agent/src/agent/: agent_loop.rs  llm_client.rs  mod.rs  tool_registry.rs
code_agent/src/tools/: bash.rs  definition.rs  executors.rs  file_ops.rs  mod.rs  search.rs  todo.rs
