[package]
name = "code_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
glob = "0.3"
regex = "1.10"
walkdir = "2.5"
colored = "2.1"
reqwest = { version = "0.12", features = ["json"] }
rustyline = "14.0"
dotenv = "0.15"
shellexpand = "3.1"
dirs = "5.0"
